# sleex-settings

./: .gitignore  PKGBUILD  README.md  meson.build
data/: com.axos-project.sleex-settings.desktop.in  com.axos-project.sleex-settings.gschema.xml  com.axos-project.sleex-settings.metainfo.xml.in  com.axos-project.sleex-settings.service.in
po/: POTFILES.in
src/: main.py  sleex-settings.gresource.xml  sleex-settings.in  window.py
src/data/: meson.build
src/po/: meson.build
src/src/: main.py  meson.build  window.py  window.ui
